# SQLRx-DocNexusAI

./: .gitignore  HEALTHCARE_ENHANCEMENT.md  LICENSE  README.md  README_ENHANCED.md  SchemaNotes.txt  app.py  langchain_agents.py  launch_app.py  main.py  pyproject.toml  requirements-enhanced.txt  requirements.txt  test_healthcare_agents.py
.streamlit/: config.toml
config/: agents.yaml
data/: sample_db.sqlite
dataset/: Conditions directory.csv  KOL Scores.csv  Payments to HCPs.csv  Referral patterns.csv  data.sqlite
utils/: db_simulator.py  ui_helpers.py
vanna-ai/: .gitignore  requirements.txt
vanna-ai/src/: main.py  train_model.py
vanna-ai/src/db/: documentation.md
vanna-ai/src/db/ddl/: Conditions_directory.sql  KOL_Providers.sql  KOL_Scores.sql  Payments_To_HCP.sql  Pharmacy_claims.sql  Provider_details.sql  Referral_patterns.sql
